workloads/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls: {}
